--- a/service/src/main/resources/errorMessages_ru_RU.properties
+++ b/service/src/main/resources/errorMessages_ru_RU.properties
@@ -1,15 +1,15 @@
-validationException.certificate.nameSize=Недопустимое имя сертификата. Длина имени должна быть меньше 45.
-validationException.certificate.nameNull=Имя сертификата обязательно для заполнения.
-validationException.certificate.durationNull=Срок действия сертификата обязательна для заполнения.
-validationException.certificate.durationNegative=Недопустимый срок действия сертификата. Срок дейтсвия должен быть положителен.
-validationException.certificate.descriptionNull=Описание сертификата обязательно для заполнения.
-validationException.certificate.descriptionSize=Недопустимое описание сертификата. Описание должна быть меньше 255 символов.
-validationException.certificate.priceNull=Цена сертификата обяхательна для заполнения.
-validationException.certificate.priceNegative=Недопустимая цена сертификата. Цена должна быть неотрицательна.
-validationException.tag.nameNull=Имя тега обязательно для заполнения.
-validationException.tag.nameSize=Недопустимое имя тега. Длина имени должна быть меньше 45.
+ValidationException.certificate.nameSize=Недопустимое имя сертификата. Длина имени должна быть меньше 45.
+ValidationException.certificate.nameNull=Имя сертификата обязательно для заполнения.
+ValidationException.certificate.durationNull=Срок действия сертификата обязательна для заполнения.
+ValidationException.certificate.durationNegative=Недопустимый срок действия сертификата. Срок дейтсвия должен быть положителен.
+ValidationException.certificate.descriptionNull=Описание сертификата обязательно для заполнения.
+ValidationException.certificate.descriptionSize=Недопустимое описание сертификата. Описание должна быть меньше 255 символов.
+ValidationException.certificate.priceNull=Цена сертификата обяхательна для заполнения.
+ValidationException.certificate.priceNegative=Недопустимая цена сертификата. Цена должна быть неотрицательна.
+ValidationException.tag.nameNull=Имя тега обязательно для заполнения.
+ValidationException.tag.nameSize=Недопустимое имя тега. Длина имени должна быть меньше 45.
 
-DAOException.tag.emptyKeyHolder=Ошибка во время сохранения сертификата. KeyHolder пуст.
-DAOException.certificate.emptyKeyHolder=Ошибка во время сохранения тега. KeyHolder пуст.
-DAOException.tag.notFound=Тег с заданным ID не существует.
-DAOException.certificate.notFound=Сертификат с заданным ID не существует.
+EntityNotFoundException.tag.emptyKeyHolder=Ошибка во время сохранения сертификата. KeyHolder пуст.
+EntityNotFoundException.certificate.emptyKeyHolder=Ошибка во время сохранения тега. KeyHolder пуст.
+EntityNotFoundException.tag=Тег с заданным ID не существует.
+EntityNotFoundException.certificate=Сертификат с заданным ID не существует.
