refactoring and bug fixes

--- a/service/src/main/resources/ValidationMessages_ru_RU.properties
+++ b/service/src/main/resources/ValidationMessages_ru_RU.properties
@@ -23,3 +23,6 @@ message.exists.tag=Тег с заданным именем уже существ
 message.not-found.handler=Запрос не может быть обработан.
 message.not-supported=Метод не поддерживается.
 message.not-supported.exception=Неподдерживаемая ошибка.
+message.is-associated.certificate=Сертификат связан с существующим заказом и не может быть удален.
+message.is-associated.user=Пользователь связан с существующим заказом и не может быть удален.
+message.query-param=Некорректный параметр запроса.
